# telegram-mcp

./: .dockerignore  .env.example  .gitignore  CHANGES_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.uv-lock  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  LICENSE  PHASE1_COMPLETE.md  PRODUCTIONIZATION_PLAN.md  PROGRESS_SUMMARY.md  README.md  SECURITY.md  docker-compose.yml  docker-run.sh  main.py  pyproject.toml  run_server.py  telegram-mcp  telegram_mcp_server.py  test_server.py
.github/workflows/: release.yml  test.yml
config/: __init__.py  logging_config.py  settings.py
docs/: Implementation_plan.md  docker_setup.txt  telegram_mcp_server.py
examples/: basic_usage.py
src/telegram_mcp/: __init__.py  cli.py  logging.py  server.py  server_test.py
utils/: get_chat_id.py
